[package]
name = "rdedup"
version = "1.0.0"
edition = "2021"
description = "Rust port of boar's cdedup deduplication module (drop-in compatible)"
license = "Apache-2.0"

[lib]
# The compiled artifact is a Python extension module called "rdedup".
name = "rdedup"
crate-type = ["cdylib", "rlib"]

[dependencies]
# abi3-py38 builds against CPython's stable ABI, so a single compiled module
# works on any CPython >= 3.8 regardless of the exact interpreter version. This
# is what lets the Windows cross-build (see ../winbuild/) produce one rdedup.pyd
# that loads under whatever Python the bundled boar.exe ships with.
pyo3 = { version = "0.22", features = ["abi3-py38"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# Enabled when building the importable Python extension (avoids linking
# libpython into the .so). Left off for `cargo test`, so the test binary can
# link libpython and run the pure-Rust unit tests.
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
